
# Minimum CMake
cmake_minimum_required (VERSION 2.8,9)
project(play_offline)
enable_testing()

add_subdirectory( play_55_specific_ways_to_improve_your_programs_and_design )
add_subdirectory( play_c )
add_subdirectory( play_cphb )
add_subdirectory( play_cpp )
add_subdirectory( play_ping_pong )
add_subdirectory( play_servers )



